# tauri_es

./: .gitignore  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  read.db-shm  read.db-wal  tauri.conf.json  write.db-shm  write.db-wal
src-tauri/src/: db_helpers.rs  main.rs  patient_helper.rs
src-tauri/src/types/: address.rs  aggregate.rs  commands.rs  events.rs  mod.rs  patient.rs  patient_db.rs
